--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
+<h1> Recipe </h1>
+
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title %>
+  <%= f.text_field :title %> <br>
+
+  <%= f.fields_for :ingredients do |i| %>
+    <%= i.label :ingredient %>
+    <%= i.text_field :name %><br>
+
+    <%= i.label :quantity %>
+    <%= i.text_field :quantity %><br>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
