--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,12 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingredient_f| %>
+    <%= ingredient_f.label :name %><br>
+    <%= ingredient_f.text_field :name %><br>
+
+    <%= ingredient_f.label :quantity %><br>
+    <%= ingredient_f.text_field :quantity %><br>
+  <% end %>
+  <%= f.submit %>
 <% end %>
