--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,8 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  Ingredient: <%= f.fields_for :ingredients do |ingr| %>
+    <%= ingr.text_field :ingredient %>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
