--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,10 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+<%= f.label :title %>
+<%= f.text_field :title %>
+<%= f.fields_for :ingredients do |ingr| %>
+<%= ingr.text_field :name %>
+<%= ingr.text_field :quantity %>
+<% end %>
+
+<%= f.submit %>
+<% end %>
