--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,11 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+<%= f.label :title %><br>
+ <%= f.text_field :title %><br>
+ <%= f.fields_for :ingredients do |t| %>
+  <%= t.label :name %><br>
+  <%= t.text_field :name %><br>
+  <%= t.label :quantity %><br>
+  <%= t.text_field :quantity %><br>
+  <% end %>
+  <%= f.submit %>
+  <% end %>
