--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+      Recipe Title: <%= f.text_field :title %>
+      <br></br>
+      Ingredients:
+      <ul>
+            <%= f.fields_for :ingredients do |ing|%>
+                  <%= ing.label :name%>
+                  <%= ing.text_field :name%>
+
+                  <%= ing.label :quantity%>
+                  <%= ing.text_field :quantity%>
+            <br></br>
+            <%end%>
+      </ul>
+      <%= f.submit%>
 <% end %>
