--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -4,13 +4,15 @@
       Ingredients:
       <ul>
             <%= f.fields_for :ingredients do |ing|%>
-                  <%= ing.label :name%>
-                  <%= ing.text_field :name%>
-
-                  <%= ing.label :quantity%>
-                  <%= ing.text_field :quantity%>
-            <br></br>
+            <li>
+                  Name: <%= ing.text_field :name%>
+                  Qty:  <%= ing.text_field :quantity%>
+            </li>
             <%end%>
+
       </ul>
       <%= f.submit%>
+
 <% end %>
+<br></br>
+  <%= link_to 'Recipes Index', @recipe%>
