--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br>
+ 
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <%= ingredient.label :name %>
+    Name: <%= ingredient.text_field :name %><br>
+ 
+    <%= ingredient.label :quantity %>
+    Quantity: <%= ingredient.text_field :quantity%><br>
+
+  <% end %>
+ 
+  <%= f.submit %>
+<% end %>
