--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,18 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title%>
+  <%= f.text_field :title %><br><br><br>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+
+  <legend><%= ingredient.object.ingredient_number %></legend><br>
+    <%= ingredient.label :name %>
+    <%= ingredient.text_field :name %><br><br>
+
+    <%= ingredient.label :quantity %>
+    <%= ingredient.text_field :quantity %><br><br>
+
+    <%= ingredient.hidden_field :ingredient_number%>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
