--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,9 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br><br>
+  Ingredients: <%= f.fields_for :ingredients do |ingr| %><br><br>
+    Name: <%= ingr.text_field :name %>
+    Quantity: <%= ingr.number_field :quantity %><br>
+  <% end %>
+  <br><br>
+  <%= f.submit %>
 <% end %>
