--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,12 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br><br>
+
+  Ingredients: <%= f.fields_for :ingredients do |ingr| %><br>
+    <%= ingr.label :name %>
+    <%= ingr.text_field :name %>
+    <%= ingr.label :quantity %>
+    <%= ingr.text_field :quantity %><br>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
