--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,9 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
-<% end %>
+  Title: <%= f.text_field :title %> <br>
+  <%= f.fields_for :ingredients do |ingredient| %>
+  	<div>Name: <%= ingredient.text_field :name %></div> <br>
+	<div>Quantity: <%= ingredient.text_field :quantity %></div> <br>
+  <%end%>
+  	<%= link_to 'add ingredient', @recipe %>
+  <%= f.submit %>
+<%end%>
