--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,19 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+    Title: <%= f.text_field :title %>
+
+    <br><br>
+    Ingredients: <br><br>
+    <%= f.fields_for :ingredients do |i| %>
+        <%= i.label :name %>
+        <%= i.text_field :name %>
+
+        <%= i.label :quantity %>
+        <%= i.text_field :quantity %>
+
+        <br><br>
+    <% end %>
+
+    <br><br>
+
+    <%= f.submit %>
 <% end %>
