--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -6,7 +6,7 @@
 <%= ingredient.text_field :name %><br>
  
 <%= ingredient.label :quantity %>
-<%= ingredients.text_field :quantity %><br>
+<%= ingredient.text_field :quantity %><br>
 
   <% end %>
 
