--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,18 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title:
+  <%= f.text_field :title %><br>
+
+  <h4>Ingredients</h4>
+  <%= f.fields_for :ingredients do |ingred| %>
+    <%= ingred.label :name %>
+    <%= ingred.text_field :name %><br>
+
+    <%= ingred.label :quantity %>
+    <%= ingred.text_field :quantity %><br>
+
+  <% end %>
+
+  <br></br>
+
+  <%= f.submit %>
 <% end %>
