--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,18 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  Title: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+  <fieldset>
+    <legend>Ingredient</legend>
+    <%= ingredient.label :quantity %>
+    <%= ingredient.text_field :quantity %>
+    
+    <%= ingredient.label :name %>
+    <%= ingredient.text_field :name %>
+    
+    <%= ingredient.hidden_field :id %>
+  </fieldset>
+  <% end %>
+  
+  <%= f.submit %>
+<% end %>
