--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,15 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+ <%= f.label :title %>
+ <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |i| %>
+    <%= i.text_field :name%>
+    <%= i.text_field :quantity %><br>
+
+
+
+  <% end %>
+
+  <%= f.submit %>
+
 <% end %>
