--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for(@recipe) do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br>
+  <%= f.fields_for :ingredients do |ingredients_builder| %>
+  <fieldset>
+    <legend><%=ingredients_builder.object.id %></legend>
+      <%= ingredients_builder.label :name %>
+      <%= ingredients_builder.text_field :name %>
+      <%= ingredients_builder.label :quantity %>
+      <%= ingredients_builder.text_field :quantity %>
+  </fieldset>
+  <% end %>
+  <%= f.submit %>
+
+<% end %>
