--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <br>
+  Ingredients: 
+  <br>
+  <%= f.fields_for :ingredients do |ing| %>
+  	<%= ing.label :name %>
+  	<%= ing.text_field :name %><br>
+
+  	<%= ing.label :quantity %>
+  	<%= ing.text_field :quantity %><br>
+ 
+  <% end %>
+  <%= link_to 'add ingredient', @recipe %>
+  <%= f.submit %>	
 <% end %>
