--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,14 @@
+<h3>New Recipe</h3>
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <strong>Title: </strong><%= f.text_field :title %><br><br>
+
+  <strong>Ingredients:</strong><br>
+  <%= f.fields_for :ingredients do |ing| %>
+    <%= ing.label :name %>
+    <%= ing.text_field :name %><br>
+    <%= ing.label :quantity %>
+    <%= ing.text_field :quantity %><br>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
