--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,12 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <br>
+  Ingredients: <%= f.fields_for :ingredients do |ing| %>
+  <br>
+    Name: <%= ing.text_field :name %>
+    <br>
+    Quantity: <%= ing.text_field :quantity %>
+    <br>
+  <% end %>
+  <%= f.submit %>
 <% end %>
