--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br>
+
+  Ingredients:<br>
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <%= ingredient.label :ingredient_name %>
+    <%= ingredient.text_field :name %><br>
+    <%= ingredient.label :ingredient_quantity %>
+    <%= ingredient.text_field :quantity %><br>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
