--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,9 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+    Ingredient Name: <%= ingredient.text_field :name %>
+    Amount: <%= ingredient.text_field :quantity %>
+    <% end %>
+    <%= f.submit %>
 <% end %>
