--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,12 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <p>Title: <%= f.text_field :title %></p>
+    <ul>
+      <%= f.fields_for :ingredients do |ingredient| %>
+      <li>
+        name: <%= ingredient.text_field :name %>
+        quantity: <%= ingredient.text_field :quantity %>
+      </li>
+      <% end %>
+    </ul>
+  <%= f.submit %>
 <% end %>
