--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,9 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <p>Title: <%= f.text_field :title %></p>
+    <%= f.fields_for :ingredients do |ingredient| %>
+      Name: <%= ingredient.text_field :name %>
+      Quantity: <%= ingredient.text_field :quantity %>
+    <% end %>
+    <%= link_to 'add ingredient', @recipe %>
+  <%= f.submit %>
 <% end %>
