--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  <h4>Ingredients:</h4>
+  <%= f.fields_for :ingredients do |x| %>
+  <%= x.label :name %>
+  <%= x.text_field :name %><br>
+  <%= x.label :quantity %>
+  <%= x.text_field :quantity %><br>
+  <% end %>
+  
+  <%= f.submit %>
 <% end %>
