--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,29 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+
+
+			<h1>New Recipe</h1>
+
+	  <%= f.label :title %>
+	  <%= f.text_field :title %><br>
+
+
+
+
+	  <%= f.fields_for :ingredients do |ing| %>
+
+	  		<h5>Add Ingredient:</h5>
+			
+		  	<%= ing.label :name %>
+		  	<%= ing.text_field :name %><br>
+
+		  	<%= ing.label :quantity %>
+		  	<%= ing.text_field :quantity %><br>	
+	
+
+	  <% end %>
+	
+
+
+
+  <%= f.submit %>
 <% end %>
