--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,18 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <br>
+    <br>
+    
+  Ingredients: <br>
+  <%= f.fields_for :ingredients do |ingredient| %>
+  <%= ingredient.label :name %>
+  <%= ingredient.text_field :name %><br>
+  <%= ingredient.label :quantity %>
+  <%= ingredient.text_field :quantity %><br>
+  <hr>
+
+
+
+    <% end %>
+   <%= f.submit %>
 <% end %>
