--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,17 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <p>Title: <%= f.text_field :title %></p>
+
+<ul>
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <li>
+        name: <%= ingredient.text_field :name %>
+        quantity: <%= ingredient.text_field :quantity %>
+    </li>
+    <% end %>
+    <%= link_to 'add_ingredient', @recipe %>
+
+</ul>
+
+<%= f.submit %>
+
+<% end %>
