--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,17 @@
-<%= render 'form', recipe: @recipe %>
+<h3> Recipe </h3>
+
+<%= form_for @recipe do |f| %>
+  Title: <%= f.text_field :title %><br><br>
+
+  <h4> Ingredients: </h4>
+  <%= f.fields_for :ingredients do |ingred| %>
+    <%= ingred.label :name %>
+    <%= ingred.text_field :name %><br><br>
+
+    <%= ingred.label :quantity %>
+    <%= ingred.text_field :quantity %><br><br><br>
+
+    <% end %>
+
+  <%= f.submit %>
+<% end %>
