--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,10 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Recipe Title: <%= f.text_field :title %><br><br>
+  <%= f.fields_for :ingredients do |ing| %>
+	  Ingredient: <%= ing.text_field :name %><br>
+
+	  Quantity: <%= ing.text_field :quantity %><br>
+	  <br>
+  <% end %>
+  <%= f.submit %>
 <% end %>
