--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,16 @@
-<%= render 'form', recipe: @recipe %>
+
+<%= form_for @recipe do |f| %>
+Title: <%= f.text_field :title %>
+<ul>
+  <%= f.fields_for :ingredients do |ingr| %>
+    <li>
+      name:
+      <%= ingr.text_field :name %>
+      quantity:
+      <%= ingr.text_field :quantity %>
+    </li>
+  <% end %>
+  <%= link_to 'add ingredients', @recipe %>
+</ul>
+<%= f.submit %>
+<% end %>
