--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
 <%= render 'form', recipe: @recipe %>
+
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %> <br>
+
+  <%= f.fields_for :recipes do |r| %>
+    <%= r.label :name %>
+    <%= r.text_field :name %><br>
+
+    <%= r.label :quantity %>
+    <%= r.text_field :quantity %>
+  <% end %>
+  <%= f.submit %>
+<% end %>
