--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,15 +1,17 @@
-<%= render 'form', recipe: @recipe %>
+
 
 <%= form_for @recipe do |f| %>
   <%= f.label :title %>
   <%= f.text_field :title %> <br>
 
-  <%= f.fields_for :recipes do |r| %>
+  <%= f.fields_for :ingredients do |r| %>
+  <!-- ingredient 0 -->
     <%= r.label :name %>
     <%= r.text_field :name %><br>
 
     <%= r.label :quantity %>
-    <%= r.text_field :quantity %>
+    <%= r.text_field :quantity %><br>
+
   <% end %>
   <%= f.submit %>
 <% end %>
