--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,11 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+   <%= f.fields_for :ingredients do |x| %>
+    <%= x.label :name %>
+    <%= x.text_field :name %><br>
+    
+    <%= x.label :quantity %>
+    <%= x.number_field :quantity %><br>
+    <% end %>
+  <%= f.submit %>
 <% end %>
