--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,8 +1,3 @@
-<%# <%= render 'form', recipe: @recipe %> 
+ <%= render 'form', recipe: @recipe %> 
 <%# <%= binding.pry %> 
-<%= form_for @recipe do |f| %>
-<%# <%= binding.pry %>
-  Title: <%= f.text_field :title %>
 
-<%= f.submit %>
-<% end %>
