--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,13 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  Ingredients:
+  <%= f.fields_for :ingredients do |ing| %>
+
+
+    <%= ing.text_field :name %><br>
+    <%= ing.text_field :quantity %><br>
+
+  <%end%>
+  <%= f.submit %>
 <% end %>
