--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,10 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  <%= f.fields_for :ingredients do |ing| %>
+  	Quantity: <%= ing.text_field :quantity %>
+  	Name: <%= ing.text_field :name %><br>
+  <% end %>
+<%= f.submit %>
+
 <% end %>
