--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', recipe: @recipe %>
+<h3>Recipe</h3>
+
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br><br>
+
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <%= ingredient.label :name %>
+    <%= ingredient.text_field :name %>
+    <%= ingredient.label :quantity %>
+    <%= ingredient.text_field :quantity %><br><br>
+  <% end %>
+
+  <%= f.submit %>
+<% end %>
