--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,16 @@
-<%= render 'form', recipe: @recipe %>
+
+
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |ing| %>
+    <%= ing.label :name %><br>
+    <%= ing.text_field :name %>
+
+    <%= ing.label :quantity %><br>
+    <%= ing.text_field :quantity %>
+  <%end%>
+
+  <%= f.submit %>
+<% end %>
