--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,22 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br>
+<br>
+  <%= f.fields_for :ingredient do |ingr| %>
+    <%= ingr.label :name %>
+    <%= ingr.text_field :name %><br>
+
+    <%= ingr.label :quantity %>
+    <%= ingr.text_field :quantity %><br>
+
+    <%= ingr.label :name %>
+    <%= ingr.text_field :name %><br>
+
+    <%= ingr.label :quantity %>
+    <%= ingr.text_field :quantity %><br>
+
+
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
