--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,9 +1,10 @@
 <h2> <%= @recipe.title %></h2>
 
 <h3>Ingredients</h2>
-
 <ul>
-<% @recipe.ingredients.each do |ingredient| %>
+<% binding.pry %>
+<% @recipe.ingredients.map do |ingredient| %>
+<% binding.pry %>
   <li><%= "#{ingredient.name} X #{ingredient.quantity}" %></li>
 <% end %>
 </ul>
