--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,14 @@
-<%= render 'form', recipe: @recipe %>
+
+<%= form_for @recipe do |f| %>
+    <%= f.label :title %>
+    <%= f.text_field :title %><br>
+
+    <%= f.fields_for :ingredients do |ingredients| %>
+    <%= ingredients.label :quantity %>
+    <%= ingredients.text_field :quantity %><br>
+
+    <%= ingredients.label :name %>
+    <%= ingredients.text_field :name %><br>
+    <% end %>
+  <%= f.submit %>
+<% end %>
