--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+    <%= f.label  :title %>
+    <%= f.text_field :title %>
+
+    <%= f.fields_for :ingredients do |ingredient| %>
+        Ingredient Name: <%= ingredient.text_field :name %>
+        Quantity: <%= ingredient.text_field :quantity %>
+    <% end %>
+
+    <%= link_to 'add new ingredient', @recipe %>
+
+    <%= f.submit %>
+
+
+<% end %>
