--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,14 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  Title: <%= f.text_field :title %>
+  <%= f.fields_for :ingredients do |ingredient| %>
+    <%= ingredient.label :name %>
+    <%= ingredient.text_field :name %>
+    <br></br>
+    <%= ingredient.label :quantity %>
+    <%= ingredient.text_field :quantity %>
+    <br></br>
+  <% end %>
+  <%= link_to 'add ingredient', @recipe %>
+  <br></br>
+  <%= f.submit %>
+<% end %>
