--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,7 +1,7 @@
 <%=form_for @recipe do |f| %>
 <%=f.label :title %>
 <%=f.text_field :title %><br>
-
+<%=f.label :ingredients %><br>
 <%=f.fields_for :ingredients do |ingd|%>
 <%=ingd.label :name %>
 <%=ingd.text_field :name %><br>
