--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,5 +1,20 @@
 <%= form_for @recipe do |f| %>
   <%= f.label :title %><br>
   <%= f.text_field :title %><br>
+  <%= f.label :ingredients %>
+
+  <p></p>
+
+  <%= f.fields_for :ingredients do |ingr| %>
+
+    <%= ingr.label :name %>
+    <%= ingr.text_field :name  %>
+    <%= ingr.label :quantity %>
+    <%= ingr.text_field :quantity %>
+
+  <% end %>
+
+  <p></p>
+
   <%= f.submit %>
 <% end %>
