--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,7 +3,7 @@
 <h3>Ingredients</h2>
 
 <ul>
-<% @recipe.ingredients.each do |ingredient| %>
-  <li><%= "#{ingredient.name} X #{ingredient.quantity}" %></li>
+<% @recipe.ingredients.each do |ingredient| %>  
+  <li><%= "#{ingredient.name} - #{ingredient.quantity}" %></li>
 <% end %>
 </ul>
