--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,12 @@
-<%= render 'form', recipe: @recipe %>
+
+<%=form_for @recipe do |f| %>
+<%=f.label :title %>
+<%=f.text_field :title %>
+<%=f.fields_for :ingredients do |ingre| %>
+  <%=ingre.label :name %>
+  <%=ingre.text_field :name %>
+  <%=ingre.label :quantity %>
+  <%=ingre.text_field :quantity %>
+<%end%>
+<%=f.submit%>
+<% end %>
