--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', recipe: @recipe %>
+
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %>
+  <ul>
+    <%= f.fields_for :ingredients do |ingr| %>
+      <li>
+        name: <%= ingr.text_field :name %>
+        qty: <%= ingr.text_field :quantity %>
+      </li>
+      <% end %>
+      <%= link_to 'add ingredient', @recipe %>
+  </ul>
+  <%= f.submit %>
+<% end %>
