--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,16 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+  <%= f.fields_for :ingredients do |f| %>
+    <%= f.label :quantity %>
+    <%= f.text_field :quantity %><br>
+    <%= f.label :name %>
+    <%= f.text_field :name %><br>
+  <% end %>
+  <%= f.fields_for :ingredients do |f| %>
+    <%= f.label :quantity %>
+    <%= f.text_field :quantity %><br>
+    <%= f.label :name %>
+    <%= f.text_field :name %><br>
+  <% end %>
+  <%= f.submit %>
 <% end %>
