--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,10 +1,10 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
-  <%=f.fields_for :ingredients do |ing|%>
-  <%= ing.label :name %>
-  <%= ing.text_field :name %><br>
-  <%= ing.label :quantity %>
-  <%= ing.text_field :quantity %><br>
+  <%=f.fields_for :ingredients do |ing|%><br><br>
+  
+  Ingredient Name: <%= ing.text_field :name %><br><br>
+  
+  Quantity: <%= ing.text_field :quantity %><br><br>
   <% end %>
   <%= f.submit %>
 <% end %>
