--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,17 @@
 <%= form_for @recipe do |f| %>
   Title: <%= f.text_field :title %>
+
+  <p>
+  Ingredients:
+  </p>
+    <%= f.fields_for :ingredients do |ing| %>
+    <fieldset>
+    Quantity: <%= ing.text_field :quantity %>
+    Name: <%= ing.text_field :name %>
+  </fieldset>
+  <% end %>
+
+  <p>
+  <%= f.submit %>
+  </p>
 <% end %>
