--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,14 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do |f| %>
+  <%= f.label :title %>
+  <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do |recip| %>
+    <%= recip.label :name %>
+    <%= recip.text_field :name %><br>
+
+    <%= recip.label :quantity %>
+    <%= recip.text_field :quantity %><br>
+  <% end %>
+
+  <%= f.submit %>
+<% end %>
