--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,10 +1,15 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br></br>
 
-  <%= f.fields_for :ingredients do |ingred| %>
-    Name: <%= ingred.text_field :name %><br>
-    Quantity: <%= ingred.text_field :quantity %><br>
-  <% end %>
-
+  Ingredients: 
+  <ul>
+    <%= f.fields_for :ingredients do |ingred| %>
+      <li>
+        Name: <%= ingred.text_field :name %><br></br>
+        Quantity: <%= ingred.text_field :quantity %><br></br>
+      </li>
+    <% end %>
+  </ul>
+  
   <%= f.submit %>
 <% end %>
