--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -6,14 +6,13 @@
   <br> 
   
   <%= f.fields_for :ingredients do |ing| %>
-    <%= ing.label %>
-    <%= ing.text_field %>
+    <%= ing.label :quantity %>
+    <%= ing.text_field :quantity %>
     <br>
     
-    <%= ing.label %>
-    <%= ing.text_field %>
+    <%= ing.label :name %>
+    <%= ing.text_field :name %>
     <br>
-    
   <% end %>
   
   <br>
