--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,12 +1,9 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
-    Ingredients: <%= f.fields_for :ingerdients do |ing| %>
-    Name_1<%= ing.text_field :name %><br>
-    Quantity_1<%= ing.text_field :quantity %><br>
-
-    Name_2<%= ing.text_field :name %><br>
-    Quantity_2<%= ing.text_field :quantity %><br>
-    
+  Title: <%= f.text_field :title %><br>
+    Ingredients: <br>
+    <%= f.fields_for :ingredients do |ing| %>
+    Name<%= ing.text_field :name %><br>
+    Quantity<%= ing.text_field :quantity %><br>
     <% end%>
-
+  <%= f.submit %>
 <% end %>
