--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,14 @@
-<%= render 'form', recipe: @recipe %>
+<!-- <%= render 'form', recipe: @recipe %> -->
+<%=form_for(@recipe) do |f|%>
+<h3>Recipe</h3>
+  <%=f.label :title%>
+  <%=f.text_field :title %><br>
+    <%=f.fields_for :ingredients do |i|%>
+    <h3>Ingredient</h3>
+      <%=i.label :name%>
+      <%=i.text_field :name %><br>
+      <%=i.label :quantity%>
+      <%=i.text_field :quantity%><br>
+    <%end%>
+    <%=f.submit%>
+<%end%>
