--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,10 @@
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br>
+  Ingredients:<br>
+  <%= f.fields_for :ingredients do |ingredients_attributes| %>
+    Name: <%= ingredients_attributes.text_field :name %>
+    Quantity: <%= ingredients_attributes.text_field :quantity %><br>
+
+    <% end %>
+    <%= f.submit "commit" %>
 <% end %>
