--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,6 @@
+<% if flash[:notice] %>
+  <div class="warning"><h1> <%= flash[:notice] %></h1></div>
+<% end %>
+
+<h1>Enter New Recipie:</h1>
 <%= render 'form', recipe: @recipe %>
