--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
 <%= render 'form', recipe: @recipe %>
+
+# recipe = {
+#     :title => "",
+#     :ingredients_attributes => {
+#         0 => {
+#             :ingredient_name => "",
+#             :ingredient_quantity => ""        
+#         },
+#         1 => {
+#             :ingredient_name => "",
+#             :ingredient_quantity => ""
+#         }
+#     }
+# }
