--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,3 +1,12 @@
+<h1>Recipe</h1>
+
 <%= form_for @recipe do |f| %>
-  Title: <%= f.text_field :title %>
+  Title: <%= f.text_field :title %><br><br>
+
+  <%= f.fields_for :ingredients do |i| %>
+    Name: <%= i.text_field :name %>
+    Quantity: <%= i.text_field :quantity %><br>
+  <% end %>
+
+  <%= f.submit %>
 <% end %>
